Bug 1391186 - Thunderbird loses setting as default email client when "mailto" triggered by Firefox 56/57 (OS X 10.11). r=spohl, a=lizzard

MozReview-Commit-ID: H0VVoHR7LmQ